# qanotai

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.json  install.sh  pyproject.toml  requirements.txt
.claude/agents/: qanot-architect.md  qanot-debug.md  qanot-impl.md  qanot-review.md
.claude/commands/: add.md  fix.md  improve.md  push.md  review.md  status.md  test.md
docs/: GUIDE.md  api-reference.md  architecture.md  configuration.md  getting-started.md  index.md  memory.md  plugins.md  providers.md  rag.md  scheduler.md  telegram.md  tools.md
plugins/: __init__.py
plugins/absmarket/: SOUL_APPEND.md  TOOLS.md  plugin.py
plugins/absvision/: SOUL_APPEND.md  TOOLS.md  plugin.py
plugins/mysql_query/: plugin.json  (+1 more)
qanot/: __init__.py  __main__.py  agent.py  agent_bot.py  backup.py  cli.py  compaction.py  config.py  context.py  daemon.py  dashboard.py  dashboard_html.py  fs_safe.py  links.py  main.py  memory.py  prompt.py  ratelimit.py  routing.py  scheduler.py  secrets.py  session.py  telegram.py  utils.py  voice.py
scripts/: agent_eval.py  autoresearch.py
tests/: test_agent.py  test_agent_bot.py  test_agent_manager.py  test_backup.py  test_command_safety.py  test_compaction.py  test_config.py  test_context.py  test_cost_tracking.py  test_delegate.py  test_doctor.py  test_exec_security.py  test_failover.py  test_image.py  test_links.py  test_memory.py  test_new_features.py  test_rag.py  test_rag_enhancements.py  test_routing.py  test_session.py  test_streaming.py  test_subagent.py  test_telegram.py  test_voice.py  test_web_fetch.py
(+63 files in other folders)
