[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qanot"
version = "1.0.0"
description = "Lightweight AI agent framework for Telegram bots"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4",
    "anthropic>=0.40",
    "openai>=1.50",
    "aiohttp>=3.9",
    "aiomysql>=0.2",
    "apscheduler>=3.10",
]

[project.scripts]
qanot = "qanot.cli:main"

[tool.setuptools.packages.find]
include = ["qanot*", "plugins*"]

[tool.setuptools.package-data]
qanot = ["templates/**/*"]
plugins = ["**/*.py", "**/*.md"]
